<resources>
    <string name="app_name">Shrine</string>

    <string name="login_usernamehint">Username</string>
    <string name="login_userpasshint">Password</string>

    <string name="all_buttonnext">Next</string>
    <string name="all_buttoncancel">Cancel</string>

    <string name="login_helpertext_username">email</string>
    <string name="login_password_error">Password should have at least 8 symbols</string>

    <string name="login_contentdescription_welcomephoto">Welcome Photo</string>

    <string name="toolbar_menu_filter">Filter</string>
    <string name="toolbar_menu_search">Search</string>

    <string name="card_product_title">Product Title</string>
    <string name="card_product_description">Product Description</string>


    <!-- Shrine backdrop menu labels -->
    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>
</resources>
